--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: "Montserrat", sans-serif;
     background-color: #f7f7f7;
-    background-image: url('background_sky.jpg');
+    background-image: url('./background_sky.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
